# PyGitUp

./: .coveragerc  .gitignore  .travis.yml  LICENCE  Pipfile  PyGitUp.py  README.md  README.rst  appveyor.yml  azure-pipelines.yml  check-bundler.rb  dev-requirements.txt  git-up.py  git-up.spec  gitup.spec  pyproject.toml  release.py  requirements.txt  setup.py
.github/: ci-workflow.yml
.github/workflows/: ci-workflow.yml  publish-workflow.yml
PyGitUp/: check-bundler.rb  git_wrapper.py  gitup.py  utils.py
PyGitUp/tests/: __init__.py  test_ahead_of_upstream.py  test_bundler.py  test_detached.py  test_diverged.py  test_fast_forwarded.py  test_faster_fastforwarded.py  test_fetch_fail.py  test_fetch_interrupted.py  test_fetch_large_output.py  test_fetchall.py  test_git_not_in_path.py  test_issue_55.py  test_local_tracking.py  test_log_hook.py  test_multiple_remotes.py  test_no_remotes.py  test_nofetch.py  test_not_on_a_git_repo.py  test_out_of_tree.py  test_overwrite_untracked_error.py  test_push.py  test_rebase_arguments.py  test_rebase_error.py  test_rebasing.py  test_remote_branch_deleted.py  test_returning_to_branch.py  test_run_in_subdir.py  test_separate_worktree.py  test_stash_error.py  test_submodules.py  test_submodules_dirty.py  test_tracking.py  test_unstash_error.py  test_up_to_date.py  test_utils.py  test_version.py
tests/: TESTCASES  __init__.py  test_ahead_of_upstream.py  test_bundler.py  test_checkout_error.py  test_detached.py  test_diverged.py  test_fast_forwarded.py  test_fetch_fail.py  test_fetchall.py  test_git_not_in_path.py  test_local_tracking.py  test_log_hook.py  test_multiple_remotes.py  test_no_remotes.py  test_nofetch.py  test_not_on_a_git_repo.py  test_out_of_tree.py  test_overwrite_untracked_error.py  test_rebase_arguments.py  test_rebase_error.py  test_rebasing.py  test_remote_branch_deleted.py  test_returning_to_branch.py  test_stash_error.py  test_submodules.py  test_submodules_dirty.py  test_tracking.py  test_unstash_error.py  test_up_to_date.py  test_utils.py  test_version.py
