[tool.poetry]
name = "git-up"
version = "2.2.0"
description = "A python implementation of 'git up'"
authors = ["Markus Siemens <markus@m-siemens.de>"]
license = "MIT"
packages = [
    { include = "PyGitUp" }
]

readme = "README.rst"

homepage = "https://github.com/msiemens/PyGitUp"
keywords = ["database", "nosql"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
GitPython = "^3.0.0"
colorama = "^0.4.0"
termcolor = "^2.0.0"

[tool.poetry.dev-dependencies]
coveralls = "^2.0.0"
pytest = "^7.2.0"
pytest-cov = "^2.8.1"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-up = 'PyGitUp.gitup:run'
