[project]
name = "git-up"
version = "2.4.0"
description = "A python implementation of 'git up'"
authors = [{ name = "Markus Siemens", email = "markus@m-siemens.de" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
keywords = ["database", "nosql"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "GitPython~=3.1",
    "colorama~=0.4",
    "packaging~=25.0",
    "termcolor~=3.2",
]

[project.urls]
Homepage = "https://github.com/msiemens/PyGitUp"

[project.scripts]
git-up = "PyGitUp.gitup:run"

[dependency-groups]
dev = [
    "coveralls~=4.0",
    "pytest~=9.0",
    "pytest-cov~=7.0",
]

[tool.hatch.build.targets.sdist]
include = ["PyGitUp"]

[tool.hatch.build.targets.wheel]
include = ["PyGitUp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
